...

            BoxWithConstraints(
                modifier = Modifier
                    .fillMaxWidth()
                    .semantics {
                        testTagsAsResourceId = true
                        testTag = "HourlyWeatherScroll"
                    }
                    .apply {
                        if(fillsMaxHeight) {
                            fillMaxHeight()
                        }
                    }
...
