...

        // Location name
        Text(
            modifier = Modifier
                .semantics {
                    testTagsAsResourceId = true
                    testTag = "LocationNameLabel"
                }
                .padding(top = 54.dp),
            text = name,
            fontWeight = FontWeight.Normal,
            fontFamily = FontFamily.Monospace,
            fontSize = 32.sp,
...
